--- a/work.1.html
+++ b/work.1.html
@@ -8,23 +8,38 @@
     <title>ว้าว</title>
 </head>
 <hr>
+<hr size="15" color="black">
 <h1>เจษฎา ขันตะราช เลขที่ 17 ม. 5/6</h1>  
 <body 
 <br></br>
-<hr size="3"/>
+<img src="D:\บักเชี่ยเจต\32696_0.jpg" width="550" height="400">
+<hr size="15" color="black">
      😑😑😑😑😑😑😑😑😑😑😑😑😑😑😑😑 
     <B> <br >ปัจจุบันศึกษาอยู่ที่โรงเรียนธาตุนารายณ์วิทยา </B>  
     <I>ความถนัดคือ การนอน เเบบอัตโนมัติ       <br ></I>
      😑😑😑😑😑😑😑😑😑😑😑😑😑😑😑😑  
-้     <hr size="3"/>
+้    <hr size="15" color="black">
      <h1>ความสามารถ</h1>
        <h3><li>เล่นเกม</li></h3>
        <h3><li>กิน</li></h3>
        <h3><li>นอน</li></h3>
-
+       <hr size="15" color="black">
     <h1>งานไม่อดิเรก</h1>
         <h3><li>นอนอีก</li></h3>
         <h3><li>ก็นอนนั้นเเหละ</li></h3>
+        <ol></ol>
+        <a href="https://www.youtube.com/watch?v=aK_MU3EkjtI">เพลงที่มักหลายยยยยยยยยยยยยยยย</a>
+        <hr size="15" color="black">
+        <hr size="15" color="purple">
+        <hr size="15" color="violet">
+        <hr size="15" color="blue">
+        <hr size="15" color="green">
+        <hr size="15" color="yellow">
+        <hr size="15" color="orange">
+        <hr size="15" color="red">
+    
+        
+
 </body>
 </html>
 </hr>
