--- a/work.2.html
+++ b/work.2.html
@@ -12,7 +12,7 @@
 <h1>เจษฎา ขันตะราช เลขที่ 17 ม. 5/6</h1>  
 <body 
 <br></br>
-<img src="D:\บักเชี่ยเจต\32696_0.jpg" width="550" height="400">
+<img src="img/cartoon-1299393_960_720.webp" width="550" height="400">
 <hr size="15" color="black">
      😑😑😑😑😑😑😑😑😑😑😑😑😑😑😑😑 
     <B> <br >ปัจจุบันศึกษาอยู่ที่โรงเรียนธาตุนารายณ์วิทยา </B>  
