--- a/work.2.html
+++ b/work.2.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>work.2</title>
 </head>
+   <font color="red">
+ <h2> งานที่ 3 ตาราง </h2>
+    </font>
 <hr>
 <hr size="15" color="black">
 <h1>เจษฎา ขันตะราช เลขที่ 17 ม. 5/6</h1>  
