--- a/work.3.html
+++ b/work.3.html
@@ -8,7 +8,7 @@
     <title>work</title>
 </head>
    <font color="red">
- <h2> งานที่ 2 ตาราง </h2>
+ <h2> งานที่ 2 รูปภาพเเละลิ้ง </h2>
     </font>
 <hr>
 <hr size="15" color="black">
