--- a/work.3.html
+++ b/work.3.html
@@ -41,9 +41,9 @@
             <font color="red">
              
                        <h2>เพลงที่มักหลาย</h2>
-            <a href="https://youtu.be/OpdcNp-GAmc" targrt="blank">1. งานแต่งคนจน - มนต์แคน แก่นคูน【 MV CUTDOWN】 </a><br>
-            <a href="https://youtu.be/ISsHnqkIpIs" targrt="blank" >2.ยังฮักไผอีกได้บ่ - มนต์แคน แก่นคูน , มีนตรา อินทิรา 【MUSIC VIDEO】</a><br>
-            <a href="https://youtu.be/pamYfIA0xfo" targrt="blank" >3.อ้ายฮักเขา ตอนเจ้าบ่ฮัก - มนต์แคน แก่นคูน【LYRIC VIDEO】</a><br>
+            <a href="https://youtu.be/OpdcNp-GAmc" target="_blank">1. งานแต่งคนจน - มนต์แคน แก่นคูน【 MV CUTDOWN】 </a><br>
+            <a href="https://youtu.be/ISsHnqkIpIs" target="_blank" >2.ยังฮักไผอีกได้บ่ - มนต์แคน แก่นคูน , มีนตรา อินทิรา 【MUSIC VIDEO】</a><br>
+            <a href="https://youtu.be/pamYfIA0xfo" target="_blank" >3.อ้ายฮักเขา ตอนเจ้าบ่ฮัก - มนต์แคน แก่นคูน【LYRIC VIDEO】</a><br>
 
 
 
