--- a/work.2.html
+++ b/work.2.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>work.3</title>
+    <title>work</title>
 </head>
    <font color="red">
  <h2> งานที่ 3 ตาราง </h2>
     </font>
+    <font color="red">
+      <h2> นายเจษฎา ขันตะราช เลขที่ 17 ม.5/6 </h2>
+         </font>       
 <hr>
 <hr size="15" color="black">
 <h1>เจษฎา ขันตะราช เลขที่ 17 ม. 5/6</h1>  
@@ -34,7 +37,11 @@
         <h3><li>นอนอีก</li></h3>
         <h3><li>ก็นอนนั้นเเหละ</li></h3>
         <ol></ol>
-        <a href="https://www.youtube.com/watch?v=aK_MU3EkjtI">เพลงที่มักหลายยยยยยยยยยยยยยยย</a>
+        
+        <h2>เพลงที่มักหลาย</h2>
+        <a href="https://youtu.be/OpdcNp-GAmc" target="_blank">1. งานแต่งคนจน - มนต์แคน แก่นคูน【 MV CUTDOWN】 </a><br>
+        <a href="https://youtu.be/ISsHnqkIpIs" target="_blank" >2.ยังฮักไผอีกได้บ่ - มนต์แคน แก่นคูน , มีนตรา อินทิรา 【MUSIC VIDEO】</a><br>
+        <a href="https://youtu.be/pamYfIA0xfo" target="_blank" >3.อ้ายฮักเขา ตอนเจ้าบ่ฮัก - มนต์แคน แก่นคูน【LYRIC VIDEO】</a><br>
         <center>  
         <table border="1" bgcolor="#DDDDDD">
             <thead>
