--- a/work.4.html
+++ b/work.4.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>work</title>
 </head>
-   <font color="9C254D">
- <h2> งานที่ 3 ตาราง </h2>
+   <font color="red">
+ <h2> งานที่ 4 css </h2>
     </font>
-    <font color="9C254D">
+    <font color="red">
       <h2> นายเจษฎา ขันตะราช เลขที่ 17 ม.5/6 </h2>
          </font>       
 <link rel="stylesheet" href="/css/style.css">
