--- a/work.4.html
+++ b/work.4.html
@@ -13,7 +13,7 @@
     <font color="red">
       <h2> นายเจษฎา ขันตะราช เลขที่ 17 ม.5/6 </h2>
          </font>       
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="style.css">
 <style>
   h1{
 color: rgb(129, 2, 66);
